--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "blog-app-challenge-starter-files",
+  "name": "blog-app-mongoose-challenge-solution-tests",
   "version": "0.0.1",
-  "description": "Shopping list app to demo 'the modern classic'",
+  "description": "Blog app to demo 'the modern classic'",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
@@ -10,6 +10,7 @@
   "dependencies": {
     "body-parser": "^1.15.2",
     "express": "^4.12.4",
+    "mocha": "^4.0.1",
     "mongoose": "^4.7.1",
     "morgan": "^1.7.0",
     "uuid": "^2.0.3"
@@ -19,5 +20,11 @@
     "hyperdev",
     "express"
   ],
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "chai": "^3.5.0",
+    "chai-http": "^3.0.0",
+    "faker": "^3.1.0",
+    "mocha": "^3.2.0"
+  }
 }
